lab1/Test/L1-A-11-49.cmm
struct {
}OLOqmBLWECgdc6 
;
struct bSGAwtB7LgQn8 {
  int w6FGNwdoTUpM3_ ;
  struct tEooCA4hqIB P0i ;
}Ces849MhRqTO ( struct YcEUdOFTjXwnc ARQnUPO7M , int 
  kKX21Zv ) {
  float gdQsljTdRNO2zeNTpF3 [ 965141016 ] = T || lfPH7Xf8_ 
    > ESHnjZGUCjpNCES_1r + t_n0yZUt71ii7I / - ! UiCE [ 
    UQ1mPz6 = bivyOKN34lTja && PbQLh * J6pyEY60wLJGvZ9a2t1 
    ( ipoM3b7_ , YU_1fWHLHlWwaTPpFR1 <= ( EeKIJA11TkK0CA 
    < EwGTXHV0HtXv8vyw * EWkW3tI [ lXe78FDSJreNJPgx || 
    aBn == XimdfOPFUApGbELj ] . oV7l0 * - MqkZKmoGay7yUH29R 
    * 1552316695.2118612329 != 1548488110 >= ) . Rc_DBAC96oo5pU 
    ) ] - NTqCgxPLgt5 ( ) , sjnFUP ;
}
int ;
int ;
int bZW , 

;
int ( ) {
{
  }}
int ;
int WuYfsq4uy ( ) {
  if ( SsO )   V ;

}
int g ( ) {
  return T < ;
}
int ;
int uL6oz8s5iXLTT ( ) {
}
int ;
int nUz ( ) {
  if ( E12Svnqmbq )   ta5ThfQ6pH3eXE9 ;
else   while ( Aj8kVSDUUp1bePLV0A )   oz4JL0SuF66LwTGDy1 
    ;


}
int ;
int t9A ( ) {
  if ( Wc6Wv )   dnaOjDmi ;
else   if ( qQshO )   t_oKbUQ4q_Shrb1p ;


}
int ( ) {
  if ( d4Pnk0WenSq0VM3vDA4 )   NLq0k7QVTYOkukVHDAF 
    ;
else   rn ;

}
